Swapped out character image and fixed CSS syntax error that was squishing images together on page

--- a/Website/stylish.css
+++ b/Website/stylish.css
@@ -56,8 +56,21 @@ nav {
     gap: 20px
 }
 .characters-box {
-display: flex;
-justify-content: center;
-gap: 18px;
-flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    gap: 18px;
+    flex-wrap: wrap;
+}
+
+.profile-card {
+    width: 200px;
+    border-radius: 12px;
+    padding: 14px;
+    text-align: center;
+}
+
+.profile-card img {
+    width: 100%;
+    height: auto;
+  object-fit: cover;
 }
